@@ -818,9 +818,14 @@ bool do_replay(display& disp, const gamemap& map, const game_data& gameinfo,
 			}
 
 			game_events::fire("moveto",dst);
-			//FIXME: what's special about team 1?
+			//FIXME: what's special about team 1? regroup it with next block
 			if(team_num != 1 && (teams.front().uses_shroud() || teams.front().uses_fog()) && !teams.front().fogged(dst.x,dst.y)) {
 				game_events::fire("sighted",dst);
+			}
+			for(std::vector<team>::iterator my_team = teams.begin() ; my_team != teams.end() ; my_team++) {
+				if((my_team->uses_shroud() || my_team->uses_fog()) && !my_team->fogged(dst.x,dst.y)) {
+					my_team->see(u->second.side()-1);
+				}
 			}
 
 			fix_shroud = !replayer.is_skipping() && true;
