@@ -55,6 +55,8 @@ SVN trunk (1.1.x):
    * don't show "The End" after viewing a won multiplayer replay (#4166)
    * new option to toggle server messages when observing games
    * semi transparent HP/XP bar when unit is not selected (patch #485)
+   * play an "anonymous" music durin ennemy turns to avoid the music giving
+   hints in MP games
    * enable down arrow on scrollbar when resizing (#4809, patch #487)
    * better movement highlighting (patch #488)
    * stop save dialog complaining about bad name when pressing cancel (#4835)
